Name:           dclabel
Version:        1.0
build-type:     Simple
License:        BSD3
License-File:   LICENSE
Copyright:      (c) 2012 Hails team
Author:         Hails team
Maintainer:	Deian Stefan  <deian at cs dot stanford dot edu>
Stability:      experimental
Synopsis:       The Disjunction Category Label Format
Category:       Security
Cabal-Version:  >=1.8

Extra-source-files:
     tests/Main.hs

Description:
        The /DC Label/ (DCLabel) library provides an information
	flow control label format in the form of conjunctions of
	disjunctions of principals. Most code should import module
	"DCLabel.Safe"; trusted code should import "DCLabel.TCB".
	The core functionality of the library is documented in
	"DCLabel.TCB", while the small EDSL used to create labels is
	documents in "DCLabel.NanoEDSL".

Source-repository head
  Type:     git
  Location: http://www.github.com/scslab/dclabel.git


Library 
   Build-depends: base >= 4 && < 5, 
                  bytestring,
                  containers,
                  cereal >= 0.3.3 && < 0.4,
                  pretty > 1.0.1 && < 2

   ghc-options: -Wall -fno-warn-orphans

   Exposed-modules:
       DCLabel.Core
--     DCLabel.TCB,
--     DCLabel.Safe,
--     DCLabel.NanoEDSL,
--     DCLabel.PrettyShow,
--     DCLabel.Secrecy,
--     DCLabel.Integrity

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs

  ghc-options:
    -Wall -threaded -rtsopts

  build-depends:
    QuickCheck,
    test-framework,
    test-framework-quickcheck2,
    base,
    dclabel,
    bytestring,
    cereal
