Name:           dclabel
Version:        0.9.0
build-type:     Simple
License:        BSD3
License-File:   LICENSE
Copyright:      (c) 2012 Hails team
Author:         Hails team
Maintainer:	Deian Stefan  <deian at cs dot stanford dot edu>
Stability:      experimental
Synopsis:       The Disjunction Category Label Format
Category:       Security
Cabal-Version:  >=1.8

Extra-source-files:
     test_and_bench/test.hs
     test_and_bench/Instances.hs
     test_and_bench/bench.hs

Description:
        The /DC Label/ (DCLabel) library provides an information flow
        control label format in the form of conjunctions of
        disjunctions of principals. Most code should import module
        "DCLabel"; trusted code may additionally import
        "DCLabel.Privs.TCB".  The core functionality of the library is
        documented in "DCLabel.Core", while the small EDSL used to
        create labels is documents in "DCLabel.NanoEDSL".

Source-repository head
  Type:     git
  Location: http://www.github.com/scslab/dclabel.git


Library 
   Build-depends: base >= 4 && < 5, 
                  bytestring >= 0.9.2 && < 1.0,
                  containers >= 0.3 && < 1.0,
                  cereal >= 0.3.3 && < 0.4,
                  pretty > 1.0.1 && < 2

   ghc-options: -Wall -fno-warn-orphans

   Exposed-modules:
       DCLabel
       DCLabel.Core
       DCLabel.Privs
       DCLabel.Privs.TCB
       DCLabel.Serialize
       DCLabel.NanoEDSL
       DCLabel.PrettyShow

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test_and_bench
  main-is: test.hs

  ghc-options:
    -threaded -rtsopts

  build-depends:
    QuickCheck,
    quickcheck-instances,
    test-framework,
    test-framework-quickcheck2,
    base,
    containers,
    dclabel,
    bytestring,
    cereal
